[package]
name = "lev"
version = "0.1.0"
edition = "2021"

[dependencies]
cranelift-bforest = "0.94.0"
cranelift-codegen = "0.94.0"
cranelift-entity = "0.94.0"
cranelift-frontend = "0.94.0"
cranelift-jit = "0.94.0"
cranelift-module = "0.94.0"
cranelift-native = "0.94.0"
memoffset = "0.8.0"
sealed = "0.4.0"
