[package]
name = "lev"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
cranelift-codegen = "0.94.0"
cranelift-frontend = "0.94.0"
cranelift-jit = "0.94.0"
cranelift-module = "0.94.0"
cranelift-native = "0.94.0"
libc = "0.2"
memoffset = "0.8.0"
num = "0.4.0"
parking_lot = "0.12.1"
sealed = "0.4.0"
smallvec = "1.10.0"
